# triz

./: .gitignore  1.txt  CLAUDE.md  fix_memory_truncation.py  pyproject.toml  requirements.txt  setup_commands.py  triz_agent_wrapper.py  triz_pipeline_wrapper.py  triz_wrapper.py
docs/: TRIZ方法流程.md  (+5 more)
triz_pipeline/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml
triz_pipeline/database/: init_db.py  queries.py  triz_data.py
triz_pipeline/orchestrator/: __init__.py  orchestrator.py
triz_pipeline/scripts/: adversarial_test.py  boundary_test.py  domain_coverage_test.py  e2e_test.py  generate_report.py  launch_e2e.py  migrate_embeddings.py  model_benchmark.py  normal_test.py  stress_test.py  test_classifier.py  test_runner.py
triz_pipeline/skills/: __init__.py  base.py  registry.py
triz_pipeline/skills/m1_modeling/: handler.py
triz_pipeline/skills/m2_causal/: SKILL.md  handler.py
triz_pipeline/skills/m3_formulation/: SKILL.md  handler.py
triz_pipeline/tests/: helpers.py  test_api_client.py  test_cli.py  test_cli_rendering.py  test_context.py  test_database.py  test_database_queries.py  test_error_recovery.py  test_integration.py  test_m4_subtools.py  test_markdown_renderer.py  test_orchestrator.py  test_orchestrator_refactor.py  test_tool_registry.py  test_tools.py  test_vector_math.py
triz_pipeline/tools/: fos_search.py  input_classifier.py  m2_gate.py  m7_convergence.py  query_matrix.py  query_parameters.py  query_separation.py  registry.py  solve_contradiction.py
triz_pipeline/utils/: api_client.py  markdown_renderer.py  vector_math.py
(+211 files in other folders)
