[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triz_pipeline"
version = "0.1.0"
description = "TRIZ Pipeline — 硬编码流程编排系统"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-search-results>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triz_pipeline*"]
